Update StringReader to implement TextReader

--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -45,7 +45,7 @@
     <ClInclude Include="include\CFlat\Object.h" />
     <ClInclude Include="include\CFlat\String.h" />
     <ClInclude Include="include\CFlat\StringBuilder.h" />
-    <ClInclude Include="include\CFlat\StringReader.h" />
+    <ClInclude Include="include\CFlat\IO\StringReader.h" />
     <ClInclude Include="include\CFlat\Validate.h" />
     <ClInclude Include="src\CFlat\Collections\List.internal.h" />
     <ClInclude Include="src\CFlat\Collections\ListEnumerator.h" />
@@ -59,7 +59,7 @@
     <ClInclude Include="src\CFlat\Number.NumberBuffer.h" />
     <ClInclude Include="src\CFlat\String.internal.h" />
     <ClInclude Include="src\CFlat\StringBuilder.internal.h" />
-    <ClInclude Include="src\CFlat\StringReader.internal.h" />
+    <ClInclude Include="src\CFlat\IO\StringReader.internal.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\CFlat\Collections\ICollection.c" />
@@ -97,7 +97,7 @@
     <ClCompile Include="src\CFlat\Memory.c" />
     <ClCompile Include="src\CFlat\Object.c" />
     <ClCompile Include="src\CFlat\String.c" />
-    <ClCompile Include="src\CFlat\StringReader.c" />
+    <ClCompile Include="src\CFlat\IO\StringReader.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{9C532CDA-BB89-4A6A-934C-CBC5CD94BC02}</ProjectGuid>
