--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -22,6 +22,8 @@
     <ClInclude Include="include\CFlat\Console.h" />
     <ClInclude Include="include\CFlat\CString.h" />
     <ClInclude Include="include\CFlat\IO\FileAccess.h" />
+    <ClInclude Include="include\CFlat\IO\FileMode.h" />
+    <ClInclude Include="include\CFlat\IO\FileStream.h" />
     <ClInclude Include="include\CFlat\IO\SeekOrigin.h" />
     <ClInclude Include="include\CFlat\IO\Stream.h" />
     <ClInclude Include="include\CFlat\IO\StreamReader.h" />
@@ -76,6 +78,8 @@
     <ClCompile Include="src\CFlat\Console.ConsoleStream.c" />
     <ClCompile Include="src\CFlat\const_cast.c" />
     <ClCompile Include="src\CFlat\IO\FileAccess.c" />
+    <ClCompile Include="src\CFlat\IO\FileMode.c" />
+    <ClCompile Include="src\CFlat\IO\FileStream.c" />
     <ClCompile Include="src\CFlat\IO\SeekOrigin.c" />
     <ClCompile Include="src\CFlat\IO\Stream.c" />
     <ClCompile Include="src\CFlat\IO\Stream.NullStream.c" />
@@ -158,7 +162,7 @@
       <OpenMPSupport>false</OpenMPSupport>
       <CompileAs>CompileAsC</CompileAs>
       <DisableSpecificWarnings>4001; 4479; 4710; 4711; 4820</DisableSpecificWarnings>
-      <PreprocessorDefinitions>CFLAT_CORE_INTERNAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>CFLAT_CORE_INTERNAL;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -180,7 +184,7 @@
       <OpenMPSupport>false</OpenMPSupport>
       <CompileAs>CompileAsC</CompileAs>
       <DisableSpecificWarnings>4001; 4479; 4710; 4711; 4820</DisableSpecificWarnings>
-      <PreprocessorDefinitions>CFLAT_CORE_INTERNAL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>CFLAT_CORE_INTERNAL;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
