--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -72,6 +72,7 @@
     <ClInclude Include="src\CFlat\String.internal.h" />
     <ClInclude Include="src\CFlat\StringBuilder.internal.h" />
     <ClInclude Include="src\CFlat\IO\StringReader.internal.h" />
+    <ClInclude Include="src\CFlat\StringEnumerator.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\CFlat\CFlatException.c" />
@@ -119,6 +120,7 @@
     <ClCompile Include="src\CFlat\Object.c" />
     <ClCompile Include="src\CFlat\String.c" />
     <ClCompile Include="src\CFlat\IO\StringReader.c" />
+    <ClCompile Include="src\CFlat\StringEnumerator.c" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{9C532CDA-BB89-4A6A-934C-CBC5CD94BC02}</ProjectGuid>
