--- a/CFlat.Core/CFlat.Core.vcxproj
+++ b/CFlat.Core/CFlat.Core.vcxproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ClInclude Include="include\CFlat.h" />
     <ClInclude Include="include\CFlat\CFlatException.h" />
+    <ClInclude Include="include\CFlat\Collections\Array.h" />
     <ClInclude Include="include\CFlat\Collections\ICollection.h" />
     <ClInclude Include="include\CFlat\Collections\IEnumerable.h" />
     <ClInclude Include="include\CFlat\Collections\IEnumerator.h" />
@@ -20,7 +21,9 @@
     <ClInclude Include="include\CFlat\Collections\IReadOnlyCollection.h" />
     <ClInclude Include="include\CFlat\Collections\IReadOnlyList.h" />
     <ClInclude Include="include\CFlat\Collections\List.h" />
+    <ClInclude Include="include\CFlat\Collections\ObjectArray.h" />
     <ClInclude Include="include\CFlat\Collections\ObjectList.h" />
+    <ClInclude Include="include\CFlat\Collections\PointerArray.h" />
     <ClInclude Include="include\CFlat\Collections\PointerList.h" />
     <ClInclude Include="include\CFlat\Console.h" />
     <ClInclude Include="include\CFlat\CString.h" />
@@ -57,9 +60,12 @@
     <ClInclude Include="include\CFlat\IO\StringReader.h" />
     <ClInclude Include="include\CFlat\Validate.h" />
     <ClInclude Include="src\CFlat\CFlatException.internal.h" />
+    <ClInclude Include="src\CFlat\Collections\Array.internal.h" />
     <ClInclude Include="src\CFlat\Collections\List.internal.h" />
     <ClInclude Include="src\CFlat\Collections\ListEnumerator.h" />
+    <ClInclude Include="src\CFlat\Collections\ObjectArray.internal.h" />
     <ClInclude Include="src\CFlat\Collections\ObjectList.internal.h" />
+    <ClInclude Include="src\CFlat\Collections\PointerArray.internal.h" />
     <ClInclude Include="src\CFlat\Collections\PointerList.internal.h" />
     <ClInclude Include="src\CFlat\Console.internal.h" />
     <ClInclude Include="src\CFlat\const_cast.h" />
@@ -78,6 +84,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\CFlat\CFlatException.c" />
+    <ClCompile Include="src\CFlat\Collections\Array.c" />
     <ClCompile Include="src\CFlat\Collections\ICollection.c" />
     <ClCompile Include="src\CFlat\Collections\IEnumerable.c" />
     <ClCompile Include="src\CFlat\Collections\IEnumerator.c" />
@@ -86,7 +93,9 @@
     <ClCompile Include="src\CFlat\Collections\IReadOnlyList.c" />
     <ClCompile Include="src\CFlat\Collections\List.c" />
     <ClCompile Include="src\CFlat\Collections\ListEnumerator.c" />
+    <ClCompile Include="src\CFlat\Collections\ObjectArray.c" />
     <ClCompile Include="src\CFlat\Collections\ObjectList.c" />
+    <ClCompile Include="src\CFlat\Collections\PointerArray.c" />
     <ClCompile Include="src\CFlat\Collections\PointerList.c" />
     <ClCompile Include="src\CFlat\Console.c" />
     <ClCompile Include="src\CFlat\Console.ConsoleStream.c" />
